added playing track highlight

--- a/YaMusic.Minimal/Views/MainWindow.axaml
+++ b/YaMusic.Minimal/Views/MainWindow.axaml
@@ -36,7 +36,7 @@
       </i:Interaction.Behaviors>
     </Border>
     <Grid ColumnDefinitions="*, 48">
-      <Border Grid.Column="0" Width="240" ClipToBounds="True" Background="{DynamicResource SystemAltMediumColor}" BorderBrush="{DynamicResource SystemBaseLowColor}" BorderThickness="1" CornerRadius="24" IsVisible="{Binding IsFullModeVisible}">
+      <Border Grid.Column="0" Width="240" ClipToBounds="True" BorderBrush="{DynamicResource SystemBaseLowColor}" BorderThickness="1" CornerRadius="24" IsVisible="{Binding IsFullModeVisible}">
         <ScrollViewer>
           <ItemsControl ItemsSource="{Binding Tracks}">
             
